<resources>
    <string name="app_name">MovieBuzz</string>
    <string name="action_settings">Options</string>
    <string name="title_activity_options">Options</string>
    <string name="title_game_options_activity">Type de jeu</string>
    <string name="title_game_activity">Quizz</string>

    <!-- Accueil -->
    <string name="new_game">Nouvelle partie</string>
    <string name="stats">Statistiques</string>
    <string name="options">Options</string>

    <!-- Options -->
    <string name="options_player_name">Nom du joueur</string>
    <string name="options_save">Sauver</string>

    <!-- Game -->
    <string name="game_epreuves">Épreuve</string>
    <string name="game_timer">Timer</string>
    <string name="game_points">Points</string>
    <string name="buzz_Bouton_Valider">BUZZ !</string>

    <!-- Game end -->
    <string name="player_name">Votre nom</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="your_message">Votre message</string>

    <!-- Game options -->
    <string name="game_options_title">Paramètres de la partie</string>
    <string name="game_type_points">Le jeu est fini lorsque le joueur atteint un certain nombre de points</string>
    <string name="game_type_questions">Le jeu est fini lorsque le joueur atteint un certain nombre d\'épreuves</string>
    <string name="game_type_duration">Le jeu est fini lorsque le temps est écoulé</string>
    <string name="options_duration">Durée maximale</string>
    <string name="options_points">Points maximum</string>
    <string name="options_questions">Maximum épreuves</string>
    <string name="options_start">Commencer</string>

    <!-- Statistics -->
    <string name="title_activity_stats">StatsActivity</string>
    <string name="stats_total_points">Points cumulés</string>
    <string name="buzzer_description">Buzzer</string>

</resources>
