<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GameOptionsActivity">


    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MAX POINTS"
        android:id="@+id/buttonMaxPoint"
        android:background="@android:color/holo_orange_light"
        android:clickable="true"
        android:minWidth="350dp"
        android:height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickMaxPoint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MAX EPREUVES"
        android:id="@+id/buttonMaxEpreuve"
        android:background="@android:color/holo_orange_light"
        android:clickable="true"
        android:minWidth="350dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="27dp"
        android:layout_alignLeft="@+id/buttonMaxPoint"
        android:layout_alignStart="@+id/buttonMaxPoint"
        android:height="100dp"
        android:onClick="onClickMaxEpreuve" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CONTRE LA MONTRE"
        android:id="@+id/buttonContreMontre"
        android:background="@android:color/holo_orange_light"
        android:clickable="true"
        android:minWidth="350dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/buttonMaxEpreuve"
        android:layout_alignStart="@+id/buttonMaxEpreuve"
        android:layout_marginTop="27dp"
        android:height="100dp"
        android:contextClickable="true"
        android:onClick="onClickContreMontre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Celui qui a le plus de points apres autant d&apos;epreuve points gagne "
        android:id="@+id/textView2"
        android:layout_below="@+id/buttonMaxEpreuve"
        android:layout_centerHorizontal="true"
        android:maxWidth="250dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Le premier qui atteint ce nombre de points gagne"
        android:id="@+id/textView"
        android:layout_below="@+id/buttonMaxPoint"
        android:layout_centerHorizontal="true"
        android:maxWidth="250dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Celui qui a le plus de points a la fin du compte a rebourd gagne"
        android:id="@+id/textView3"
        android:layout_below="@+id/buttonContreMontre"
        android:layout_centerHorizontal="true"
        android:maxWidth="250dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_options_title"
        android:id="@+id/titleParamPartie"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/options_duration"
        android:id="@+id/paramMaxDuration"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleParamPartie"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/durationSeekBar"
        android:clickable="true"
        android:focusable="false"
        android:max="600"
        android:progress="10"
        android:layout_below="@+id/paramMaxDuration"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:indeterminate="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/valueMaxDuration"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/titleParamPartie"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/options_points"
        android:id="@+id/paramMaxPoints"
        android:layout_below="@+id/durationSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pointsSeekBar"
        android:layout_below="@+id/paramMaxPoints"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="5000"
        android:indeterminate="false"
        android:progress="100"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/valueMaxPoints"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/durationSeekBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/options_questions"
        android:id="@+id/paramMaxQuestions"
        android:layout_below="@+id/pointsSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionsSeekBar"
        android:clickable="true"
        android:focusable="false"
        android:max="30"
        android:progress="1"
        android:layout_below="@+id/paramMaxQuestions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:indeterminate="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/valueMaxQuestions"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pointsSeekBar"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_start"
        android:id="@+id/startGameButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:background="@android:color/holo_orange_light"
        android:padding="10dp"
        android:onClick="onStartGame" />

</RelativeLayout>
