<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:scaleType="centerCrop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gameInfoBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/game_epreuves"
            android:id="@+id/gameLabelEpreuves"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gameValueEpreuve"
            android:layout_gravity="right|top"
            android:visibility="visible"
            android:layout_below="@+id/gameLabelEpreuves"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:layout_alignRight="@+id/gameLabelEpreuves" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/game_timer"
            android:id="@+id/gameLabelTimer"
            android:layout_gravity="right|top"
            android:visibility="visible"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gameValueTimer"
            android:layout_gravity="right|top"
            android:visibility="visible"
            android:layout_below="@+id/gameLabelTimer"
            android:textAlignment="center"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/game_points"
            android:id="@+id/gameLabelPoints"
            android:layout_gravity="right|top"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gameValuePoints"
            android:layout_gravity="right|top"
            android:textColor="#ffcf01"
            android:textSize="27sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal|bold"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_below="@+id/gameLabelPoints"
            android:layout_alignRight="@+id/gameLabelPoints" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/gameInfoBar"
        android:layout_above="@+id/gameQuestion">

        <be.ipl.android.moviebuzz.views.ResizableImageView
            android:id="@+id/gameImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/gameQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/radiogroup" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">
    </RadioGroup>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/buzzerButton"
        android:src="@drawable/buzzer"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        android:onClick="buzz"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/buzzer_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="10"
        android:id="@+id/questionTimer"
        android:textColor="#13d006"
        android:visibility="visible"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/buzzerButton"
        android:layout_alignRight="@+id/buzzerButton"
        android:layout_alignTop="@+id/buzzerButton"
        android:layout_alignBottom="@+id/buzzerButton" />


</RelativeLayout>